examples/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whoami
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik

  listeners:
    # optional, only if you want to expose port 80 directly.
    - name: http
      protocol: HTTP
      port: 8000 # Default traefik helm chart port, will be mapped to 80
      hostname: whoami.k8s.tractor.scout.ch
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 8443 # Default traefik helm chart port, will be mapped to 443
      hostname: whoami.k8s.tractor.scout.ch
      tls:
        mode: Terminate
        certificateRefs:
          - name: secret-tls
            namespace: whoami

      allowedRoutes:
        namespaces:
          from: Same
---
# Optional, this is by default already configured on the ingress setup. But we keep it here as example if you wanna expose something without certificate
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http
  namespace: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: http
      kind: Gateway
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-https
  namespace: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: https
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: whoami
          port: 80
