examples/ingress-crd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.k8s.tractor.scout.ch`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: secret-tls
