examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure # necessary, since we have multiple entrypoints
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  rules:
    - host: whoami.k8s.tractor.scout.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - whoami.k8s.tractor.scout.ch
      secretName: tls-cert
